--- a/index.html
+++ b/index.html
@@ -1,1 +1,243 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Tiny Flashcards</title>
+  <style>
+    :root {
+      --bg: #000;
+      --fg: #fff;
+      --muted: #888;
+      --accent: #fff;
+    }
+    * { box-sizing: border-box; }
+    html, body {
+      font-family: "Times New Roman", Georgia, serif;
+      color: var(--fg);
+      background: var(--bg);
+      display: grid;
+      place-items: center;
+      padding: 32px;
+      position: relative;
+      overflow-x: hidden;
+    }
+    /* Background image layer */
+    body::before{
+      content:"";
+      position: fixed;
+      inset: 0;
+      background: url('bg.jpg') center/cover no-repeat;
+      filter: grayscale(100%) contrast(1.25) brightness(0.7);
+      opacity: 0.35;
+      z-index: -2;
+    }
+    /* Dark overlay to keep text legible */
+    body::after{
+      content:"";
+      position: fixed; inset:0; background: radial-gradient(ellipse at center, rgba(0,0,0,0.4), rgba(0,0,0,0.9)); z-index:-1;
+    }
+    body {
+      font-family: "Times New Roman", Georgia, serif;
+      color: var(--fg);
+      background: var(--bg);
+      display: grid;
+      place-items: center;
+      padding: 32px;
+    }
+    .app {
+      width: min(800px, 100%);
+      display: grid;
+      gap: 32px;
+    }
+    .card {
+      border: 3px solid var(--fg);
+      border-radius: 40px;
+      padding: 60px 40px 32px;
+      background: rgba(0,0,0,0.8);
+      box-shadow: 0 0 40px rgba(255,255,255,0.08);
+      text-align: center;
+    }
+    .prompt {
+      font-size: clamp(28px, 3vw, 40px);
+      margin-bottom: 24px;
+      letter-spacing: 0.5px;
+    }
+    .translation {
+      opacity: 0.9;
+      font-size: clamp(22px, 2.5vw, 30px);
+      color: var(--muted);
+    }
+    .row {
+      display: flex;
+      justify-content: center;
+      gap: 16px;
+      margin-top: 24px;
+    }
+    button {
+      font-family: inherit;
+      font-size: 18px;
+      color: var(--fg);
+      background: transparent;
+      border: 2px solid var(--fg);
+      border-radius: 50px;
+      padding: 10px 28px;
+      cursor: pointer;
+      transition: all 0.15s ease-in-out;
+    }
+    button:hover {
+      background: var(--fg);
+      color: var(--bg);
+    }
+    button:disabled {
+      opacity: 0.3;
+      cursor: not-allowed;
+    }
+    .chip, label, progress, details, textarea, .import-grid { display: none !important; }
+    progress { display:none; }
+    .footer {
+      opacity: 0.5;
+      text-align: center;
+      font-size: 14px;
+      letter-spacing: 1px;
+    }
+      /* Keep the card height stable so buttons don't jump */
+    #stage{ min-height: clamp(180px, 34vh, 320px); display: grid; place-items: center; gap: 12px; }
+    .prompt{ margin-bottom: 8px; }
+    /* Reserve space for translation even when hidden */
+    .translation{ min-height: 2.2em; transition: opacity .15s ease; }
+    .translation.hidden{ visibility: hidden; opacity: 0; }
+    .translation.visible{ visibility: visible; opacity: 0.9; }
+  </style>
+</head>
+<body>
+  <main class="app" id="app">
+    <div class="card">
+      <div id="stage">
+        <div class="prompt" id="lineText" aria-live="polite"></div>
+        <div class="translation" id="lineTrans" style="display:none;margin-top:16px"></div>
+      </div>
+      <div class="row controls-bottom" id="controlsBottom">
+        <button id="prevBtn">⟵ Prev</button>
+        <button id="nextBtn">Next ⟶</button>
+      </div>
+    </div>
+    <div class="footer">Latin Flashcards · Mr. Heise</div>
+  </main>
 
+  <script>
+    let deck = [
+      { q: "Ī ad popīnam pedibus.", a: "Go to the restaurant on foot." },
+      { q: "Ī ad librāriam bīrotā.", a: "Go to the bookstore by bike." },
+      { q: "Dic 'sōl est.'", a: "Say 'it is the sun.'" },
+      { q: "Quot gladīī sunt?", a: "How many swords are there?" },
+      { q: "Unus gladius est.", a: "There is one sword." },
+    ];
+
+    const DECK_URLS = Array.from({length: 20}, (_, i) => `decks/b${i+1}.txt`);
+
+    const el = (id) => document.getElementById(id);
+    const lineText = el('lineText');
+    const lineTrans = el('lineTrans');
+    const nextBtn = el('nextBtn');
+    const prevBtn = el('prevBtn');
+
+    let order = deck.map((_, i) => i);
+    let idx = 0;
+    let showingA = false;
+
+    function shuffleArray(arr){
+      for(let i=arr.length-1;i>0;i--){
+        const j = Math.floor(Math.random()*(i+1));
+        [arr[i],arr[j]] = [arr[j],arr[i]];
+      }
+      return arr;
+    }
+
+    function rebuildOrder(){
+      order = deck.map((_, i) => i);
+      idx = 0;
+      showingA = false;
+      render();
+    }
+
+    function render(){
+      const current = deck[ order[idx] ];
+      if(!current){
+        lineText.textContent = "(No cards)";
+        lineTrans.style.display = 'none';
+        nextBtn.disabled = true; prevBtn.disabled = true;
+        return;
+      }
+      nextBtn.disabled = false; prevBtn.disabled = false;
+      lineText.textContent = current.q;
+      lineTrans.textContent = current.a;
+      lineTrans.classList.toggle('visible', !!showingA);
+      lineTrans.classList.toggle('hidden', !showingA);
+    }
+
+    function next(){
+      if(deck.length===0) return;
+      if(!showingA){
+        showingA = true;
+      } else {
+        if(idx < order.length - 1){
+          idx++;
+          showingA = false;
+        } else {
+          idx = 0;
+          showingA = false;
+        }
+      }
+      render();
+    }
+
+    function prev(){
+      if(deck.length===0) return;
+      if(showingA){
+        showingA = false;
+      } else if(idx>0){
+        idx--; showingA = false;
+      }
+      render();
+    }
+
+    nextBtn.addEventListener('click', next);
+    prevBtn.addEventListener('click', prev);
+
+    window.addEventListener('keydown', (e) => {
+      if(e.code === 'Space' || e.key === 'ArrowRight'){ e.preventDefault(); next(); }
+      if(e.key === 'ArrowLeft'){ e.preventDefault(); prev(); }
+    });
+
+    function parseLinesToDeck(text){
+      const lines = text.split(/\n+/).map(s=>s.trim()).filter(Boolean);
+      const out = [];
+      for(const line of lines){
+        const parts = line.split(/\s*(?:=|—|-|:)\s*/);
+        if(parts.length>=2){
+          const q = parts[0].trim();
+          const a = parts.slice(1).join(' - ').trim();
+          if(q && a) out.push({q,a});
+        }
+      }
+      return out;
+    }
+
+    async function loadRandomDeckFromUrls(){
+      if(!Array.isArray(DECK_URLS) || !DECK_URLS.length) return false;
+      const pick = DECK_URLS[Math.floor(Math.random()*DECK_URLS.length)];
+      try{
+        const res = await fetch(pick, {cache:'no-store'});
+        if(!res.ok) throw new Error(res.status+' '+res.statusText);
+        const text = await res.text();
+        const parsed = parseLinesToDeck(text);
+        if(parsed.length){ deck = parsed; return true; }
+      }catch(e){ console.warn('Random deck load failed:', e); }
+      return false;
+    }
+
+    loadRandomDeckFromUrls().then(()=>{ rebuildOrder(); });
+  </script>
+</body>
+</html>
