--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <button id="nextBtn">Next ⟶</button>
       </div>
     </div>
-    <div class="footer">Latin Flashcards · Mr. Heise</div>
+    <div class="footer">mr. heise's telos latin flashcards</div>
   </main>
 
   <script>
