--- a/index.html
+++ b/index.html
@@ -9,36 +9,13 @@
       --bg: #000;
       --fg: #fff;
       --muted: #888;
-      --accent: #fff;
     }
     * { box-sizing: border-box; }
-    html, body {
-      font-family: "Times New Roman", Georgia, serif;
-      color: var(--fg);
-      background: var(--bg);
-      display: grid;
-      place-items: center;
-      padding: 32px;
-      position: relative;
-      overflow-x: hidden;
-    }
-    /* Background image layer */
-    body::before{
-      content:"";
-      position: fixed;
-      inset: 0;
-      background: url('bg.jpg') center/cover no-repeat;
-      /* show the image clearly */
-      filter: none;
-      opacity: 1;
-      z-index: -2;
-    }
-    /* Dark overlay to keep text legible */
-    /* removed dark overlay to keep background fully visible */
+    html, body { height: 100%; margin: 0; }
     body {
       font-family: "Times New Roman", Georgia, serif;
       color: var(--fg);
-      background: var(--bg);
+      background: url('bg.jpg') center/cover no-repeat fixed;
       display: grid;
       place-items: center;
       padding: 32px;
@@ -52,19 +29,32 @@
       border: 3px solid var(--fg);
       border-radius: 40px;
       padding: 60px 40px 32px;
-      background: rgba(0,0,0,0.8);
-      box-shadow: 0 0 40px rgba(255,255,255,0.08);
+      background: rgba(0,0,0,0.85);
       text-align: center;
+      box-shadow: 0 0 30px rgba(255,255,255,0.1);
+    }
+    #stage {
+      min-height: clamp(180px, 34vh, 320px);
+      display: grid;
+      place-items: center;
+      gap: 12px;
     }
     .prompt {
       font-size: clamp(28px, 3vw, 40px);
-      margin-bottom: 24px;
-      letter-spacing: 0.5px;
+      margin-bottom: 8px;
     }
     .translation {
+      display: block;
+      min-height: 2.2em;
+      transition: opacity .15s ease;
+    }
+    .translation.hidden {
+      visibility: hidden;
+      opacity: 0;
+    }
+    .translation.visible {
+      visibility: visible;
       opacity: 0.9;
-      font-size: clamp(22px, 2.5vw, 30px);
-      color: var(--muted);
     }
     .row {
       display: flex;
@@ -91,21 +81,12 @@
       opacity: 0.3;
       cursor: not-allowed;
     }
-    .chip, label, progress, details, textarea, .import-grid { display: none !important; }
-    progress { display:none; }
     .footer {
       opacity: 0.5;
       text-align: center;
       font-size: 14px;
       letter-spacing: 1px;
     }
-      /* Keep the card height stable so buttons don't jump */
-    #stage{ min-height: clamp(180px, 34vh, 320px); display: grid; place-items: center; gap: 12px; }
-    .prompt{ margin-bottom: 8px; }
-    /* Reserve space for translation even when hidden */
-    .translation{ display:block; min-height: 2.2em; transition: opacity .15s ease; }
-    .translation.hidden{ visibility: hidden; opacity: 0; }
-    .translation.visible{ visibility: visible; opacity: 0.9; }
   </style>
 </head>
 <body>
@@ -120,7 +101,7 @@
         <button id="nextBtn">Next ⟶</button>
       </div>
     </div>
-    <div class="footer">mr. heise's telos latin flashcards</div>
+    <div class="footer">Latin Flashcards · Mr. Heise</div>
   </main>
 
   <script>
@@ -163,15 +144,14 @@
       const current = deck[ order[idx] ];
       if(!current){
         lineText.textContent = "(No cards)";
-        lineTrans.style.display = 'none';
+        lineTrans.classList.add('hidden');
         nextBtn.disabled = true; prevBtn.disabled = true;
         return;
       }
       nextBtn.disabled = false; prevBtn.disabled = false;
       lineText.textContent = current.q;
       lineTrans.textContent = current.a;
-      lineTrans.style.display = 'block';
-      lineTrans.classList.toggle('visible', !!showingA);
+      lineTrans.classList.toggle('visible', showingA);
       lineTrans.classList.toggle('hidden', !showingA);
     }
 
