--- a/index.html
+++ b/index.html
@@ -3,101 +3,46 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>telos latin flashcards</title>
+  <title>Tiny Flashcards</title>
   <style>
-    :root {
-      --bg: #000;
-      --fg: #fff;
-      --muted: #888;
+    :root { --bg:#000; --fg:#fff; --muted:#9a9a9a; }
+    *{ box-sizing:border-box }
+    html,body{ height:100%; margin:0 }
+
+    /* Full, crisp background image. No overlays. */
+    body{
+      font-family:"Times New Roman", Georgia, serif;
+      color:var(--fg);
+      background:url('bg.jpg') center/cover no-repeat fixed; /* parallax feel */
+      display:block; /* allow normal scroll */
     }
-    * { box-sizing: border-box; }
-    html, body {
-      font-family: "Times New Roman", Georgia, serif;
-      color: var(--fg);
-      background: url('bg.jpg') center/cover no-repeat fixed; /* fixed bg for parallax feel */
-      display: block; /* allow normal document flow */
-      min-height: 100vh;
-      margin: 0;
-      padding: 0; /* remove centering/padding that prevented scroll */
+
+    /* Centered column with generous vertical margins so the card floats as you scroll */
+    .app{ width:min(860px,94%); margin:14vh auto 24vh; display:grid; gap:28px }
+
+    /* Flashcard box: rounded, bold border, solid black interior; nothing opaque outside it */
+    .card{
+      border:3px solid var(--fg);
+      border-radius:40px;
+      background:#000; /* only inside the card is black */
+      padding:64px 44px 36px;
+      text-align:center;
     }
-    body {
-      font-family: "Times New Roman", Georgia, serif;
-      color: var(--fg);
-      background: url('bg.jpg') center/cover no-repeat;
-      background-attachment: scroll;
-      display: grid;
-      place-items: center;
-      padding: 32px;
-    }
-    .app {
-      width: min(800px, 92%);
-      display: grid;
-      gap: 32px;
-      margin: 14vh auto 24vh; /* vertical margins create scroll so card moves over bg */
-    }
-    .card {
-      border: 3px solid var(--fg);
-      border-radius: 40px;
-      padding: 60px 40px 32px;
-      background: rgba(0,0,0,0.85);
-      text-align: center;
-      box-shadow: 0 0 30px rgba(255,255,255,0.1);
-    }
-    #stage {
-      min-height: clamp(220px, 40vh, 400px);
-      display: grid;
-      place-items: center;
-      gap: 12px;
-    }
-    .prompt {
-      font-size: clamp(32px, 3.5vw, 48px);
-      margin-bottom: 8px;
-    }
-    .translation {
-      display: block;
-      min-height: 2.4em;
-      transition: opacity .15s ease;
-      font-size: clamp(26px, 2.8vw, 38px);
-    }
-    .translation.hidden {
-      visibility: hidden;
-      opacity: 0;
-    }
-    .translation.visible {
-      visibility: visible;
-      opacity: 0.9;
-    }
-    .row {
-      display: flex;
-      justify-content: center;
-      gap: 16px;
-      margin-top: 24px;
-    }
-    button {
-      font-family: inherit;
-      font-size: 18px;
-      color: var(--fg);
-      background: transparent;
-      border: 2px solid var(--fg);
-      border-radius: 50px;
-      padding: 10px 28px;
-      cursor: pointer;
-      transition: all 0.15s ease-in-out;
-    }
-    button:hover {
-      background: var(--fg);
-      color: var(--bg);
-    }
-    button:disabled {
-      opacity: 0.3;
-      cursor: not-allowed;
-    }
-    .footer {
-      opacity: 0.5;
-      text-align: center;
-      font-size: 14px;
-      letter-spacing: 1px;
-    }
+
+    /* Stage keeps a steady height so buttons never jump */
+    #stage{ min-height:clamp(220px,40vh,420px); display:grid; place-items:center; gap:14px }
+
+    .prompt{ font-size:clamp(34px,3.8vw,50px); letter-spacing:.3px; margin:0 }
+    .translation{ display:block; min-height:2.6em; font-size:clamp(26px,2.9vw,38px); color:var(--muted); transition:opacity .15s ease }
+    .translation.hidden{ visibility:hidden; opacity:0 }
+    .translation.visible{ visibility:visible; opacity:.95 }
+
+    .row{ display:flex; justify-content:center; gap:18px; margin-top:28px }
+    button{ font:18px/1.2 inherit; color:var(--fg); background:transparent; border:2px solid var(--fg); border-radius:50px; padding:12px 30px; cursor:pointer; transition:all .15s ease }
+    button:hover{ background:var(--fg); color:var(--bg) }
+    button:disabled{ opacity:.35; cursor:not-allowed }
+
+    .footer{ text-align:center; opacity:.6; font-size:14px; letter-spacing:.6px }
   </style>
 </head>
 <body>
@@ -107,7 +52,8 @@
         <div class="prompt" id="lineText" aria-live="polite"></div>
         <div class="translation hidden" id="lineTrans" style="margin-top:16px"></div>
       </div>
-      <div class="row controls-bottom" id="controlsBottom">
+      <!-- Buttons below the text so thumbs don't cover words -->
+      <div class="row" id="controlsBottom">
         <button id="prevBtn">⟵ Prev</button>
         <button id="nextBtn">Next ⟶</button>
       </div>
@@ -116,48 +62,41 @@
   </main>
 
   <script>
+    // Built‑in fallback deck (will be replaced by random external deck when available)
     let deck = [
       { q: "Ī ad popīnam pedibus.", a: "Go to the restaurant on foot." },
       { q: "Ī ad librāriam bīrotā.", a: "Go to the bookstore by bike." },
       { q: "Dic 'sōl est.'", a: "Say 'it is the sun.'" },
       { q: "Quot gladīī sunt?", a: "How many swords are there?" },
-      { q: "Unus gladius est.", a: "There is one sword." },
+      { q: "Unus gladius est.", a: "There is one sword." }
     ];
 
-    const DECK_URLS = Array.from({length: 20}, (_, i) => `decks/b${i+1}.txt`);
+    // Auto-generate deck filenames b1–b20
+    const DECK_URLS = Array.from({length:20}, (_,i)=>`decks/b${i+1}.txt`);
 
-    const el = (id) => document.getElementById(id);
+    // Elements
+    const el = id => document.getElementById(id);
     const lineText = el('lineText');
     const lineTrans = el('lineTrans');
     const nextBtn = el('nextBtn');
     const prevBtn = el('prevBtn');
 
-    let order = deck.map((_, i) => i);
-    let idx = 0;
-    let showingA = false;
-
-    function shuffleArray(arr){
-      for(let i=arr.length-1;i>0;i--){
-        const j = Math.floor(Math.random()*(i+1));
-        [arr[i],arr[j]] = [arr[j],arr[i]];
-      }
-      return arr;
-    }
+    // State
+    let order = deck.map((_,i)=>i);
+    let idx = 0;      // which index in order
+    let showingA = false; // false = prompt, true = translation
 
     function rebuildOrder(){
-      order = deck.map((_, i) => i);
-      idx = 0;
-      showingA = false;
-      render();
+      order = deck.map((_,i)=>i);
+      idx = 0; showingA = false; render();
     }
 
     function render(){
-      const current = deck[ order[idx] ];
+      const current = deck[order[idx]];
       if(!current){
-        lineText.textContent = "(No cards)";
+        lineText.textContent = '(No cards)';
         lineTrans.classList.add('hidden');
-        nextBtn.disabled = true; prevBtn.disabled = true;
-        return;
+        nextBtn.disabled = true; prevBtn.disabled = true; return;
       }
       nextBtn.disabled = false; prevBtn.disabled = false;
       lineText.textContent = current.q;
@@ -169,37 +108,33 @@
     function next(){
       if(deck.length===0) return;
       if(!showingA){
+        // reveal the translation
         showingA = true;
       } else {
-        if(idx < order.length - 1){
-          idx++;
-          showingA = false;
-        } else {
-          idx = 0;
-          showingA = false;
-        }
+        // advance
+        if(idx < order.length-1){ idx++; showingA = false; }
+        else { idx = 0; showingA = false; }
       }
       render();
     }
 
     function prev(){
       if(deck.length===0) return;
-      if(showingA){
-        showingA = false;
-      } else if(idx>0){
-        idx--; showingA = false;
-      }
+      if(showingA){ showingA = false; }
+      else if(idx>0){ idx--; showingA = false; }
       render();
     }
 
     nextBtn.addEventListener('click', next);
     prevBtn.addEventListener('click', prev);
 
-    window.addEventListener('keydown', (e) => {
-      if(e.code === 'Space' || e.key === 'ArrowRight'){ e.preventDefault(); next(); }
-      if(e.key === 'ArrowLeft'){ e.preventDefault(); prev(); }
+    // Keyboard shortcuts (Space/→ Next, ← Prev)
+    window.addEventListener('keydown', (e)=>{
+      if(e.code==='Space' || e.key==='ArrowRight'){ e.preventDefault(); next(); }
+      if(e.key==='ArrowLeft'){ e.preventDefault(); prev(); }
     });
 
+    // --- External deck loading ---
     function parseLinesToDeck(text){
       const lines = text.split(/\n+/).map(s=>s.trim()).filter(Boolean);
       const out = [];
@@ -215,20 +150,21 @@
     }
 
     async function loadRandomDeckFromUrls(){
-      if(!Array.isArray(DECK_URLS) || !DECK_URLS.length) return false;
+      if(!DECK_URLS.length) return false;
       const pick = DECK_URLS[Math.floor(Math.random()*DECK_URLS.length)];
       try{
         const res = await fetch(pick, {cache:'no-store'});
-        if(!res.ok) throw new Error(res.status+' '+res.statusText);
+        if(!res.ok) throw new Error(res.status+" "+res.statusText);
         const text = await res.text();
         const parsed = parseLinesToDeck(text);
         if(parsed.length){ deck = parsed; return true; }
-      }catch(e){ console.warn('Random deck load failed:', e); }
+      }catch(err){ console.warn('Random deck load failed:', err); }
       return false;
     }
 
+    // First render, then try to replace with a random external deck
+    rebuildOrder();
     loadRandomDeckFromUrls().then(()=>{ rebuildOrder(); });
   </script>
 </body>
 </html>
-
