--- a/index.html
+++ b/index.html
@@ -9,27 +9,26 @@
     *{ box-sizing:border-box }
     html,body{ height:100%; margin:0 }
 
-    /* Full, crisp background image. No overlays. */
+    /* Full, crisp background image that always fills screen */
     body{
       font-family:"Times New Roman", Georgia, serif;
       color:var(--fg);
-      background:url('bg.jpg') center/cover no-repeat fixed; /* parallax feel */
-      display:block; /* allow normal scroll */
+      background:url('bg.jpg') center center / cover no-repeat fixed;
+      background-size:100% 100%; /* ensures full coverage on mobile */
+      display:block;
+      min-height:100vh;
     }
 
-    /* Centered column with generous vertical margins so the card floats as you scroll */
     .app{ width:min(860px,94%); margin:14vh auto 24vh; display:grid; gap:28px }
 
-    /* Flashcard box: rounded, bold border, solid black interior; nothing opaque outside it */
     .card{
       border:3px solid var(--fg);
       border-radius:40px;
-      background:#000; /* only inside the card is black */
+      background:#000;
       padding:64px 44px 36px;
       text-align:center;
     }
 
-    /* Stage keeps a steady height so buttons never jump */
     #stage{ min-height:clamp(220px,40vh,420px); display:grid; place-items:center; gap:14px }
 
     .prompt{ font-size:clamp(34px,3.8vw,50px); letter-spacing:.3px; margin:0 }
@@ -52,7 +51,6 @@
         <div class="prompt" id="lineText" aria-live="polite"></div>
         <div class="translation hidden" id="lineTrans" style="margin-top:16px"></div>
       </div>
-      <!-- Buttons below the text so thumbs don't cover words -->
       <div class="row" id="controlsBottom">
         <button id="prevBtn">⟵ Prev</button>
         <button id="nextBtn">Next ⟶</button>
@@ -62,7 +60,6 @@
   </main>
 
   <script>
-    // Built‑in fallback deck (will be replaced by random external deck when available)
     let deck = [
       { q: "Ī ad popīnam pedibus.", a: "Go to the restaurant on foot." },
       { q: "Ī ad librāriam bīrotā.", a: "Go to the bookstore by bike." },
@@ -71,32 +68,32 @@
       { q: "Unus gladius est.", a: "There is one sword." }
     ];
 
-    // Auto-generate deck filenames b1–b20
-    const DECK_URLS = Array.from({length:20}, (_,i)=>`decks/b${i+1}.txt`);
+    const DECK_URLS = Array.from({length: 20}, (_, i) => `decks/b${i+1}.txt`);
 
-    // Elements
-    const el = id => document.getElementById(id);
+    const el = (id) => document.getElementById(id);
     const lineText = el('lineText');
     const lineTrans = el('lineTrans');
     const nextBtn = el('nextBtn');
     const prevBtn = el('prevBtn');
 
-    // State
-    let order = deck.map((_,i)=>i);
-    let idx = 0;      // which index in order
-    let showingA = false; // false = prompt, true = translation
+    let order = deck.map((_, i) => i);
+    let idx = 0;
+    let showingA = false;
 
     function rebuildOrder(){
-      order = deck.map((_,i)=>i);
-      idx = 0; showingA = false; render();
+      order = deck.map((_, i) => i);
+      idx = 0;
+      showingA = false;
+      render();
     }
 
     function render(){
-      const current = deck[order[idx]];
+      const current = deck[ order[idx] ];
       if(!current){
-        lineText.textContent = '(No cards)';
+        lineText.textContent = "(No cards)";
         lineTrans.classList.add('hidden');
-        nextBtn.disabled = true; prevBtn.disabled = true; return;
+        nextBtn.disabled = true; prevBtn.disabled = true;
+        return;
       }
       nextBtn.disabled = false; prevBtn.disabled = false;
       lineText.textContent = current.q;
@@ -108,33 +105,37 @@
     function next(){
       if(deck.length===0) return;
       if(!showingA){
-        // reveal the translation
         showingA = true;
       } else {
-        // advance
-        if(idx < order.length-1){ idx++; showingA = false; }
-        else { idx = 0; showingA = false; }
+        if(idx < order.length - 1){
+          idx++;
+          showingA = false;
+        } else {
+          idx = 0;
+          showingA = false;
+        }
       }
       render();
     }
 
     function prev(){
       if(deck.length===0) return;
-      if(showingA){ showingA = false; }
-      else if(idx>0){ idx--; showingA = false; }
+      if(showingA){
+        showingA = false;
+      } else if(idx>0){
+        idx--; showingA = false;
+      }
       render();
     }
 
     nextBtn.addEventListener('click', next);
     prevBtn.addEventListener('click', prev);
 
-    // Keyboard shortcuts (Space/→ Next, ← Prev)
-    window.addEventListener('keydown', (e)=>{
-      if(e.code==='Space' || e.key==='ArrowRight'){ e.preventDefault(); next(); }
-      if(e.key==='ArrowLeft'){ e.preventDefault(); prev(); }
+    window.addEventListener('keydown', (e) => {
+      if(e.code === 'Space' || e.key === 'ArrowRight'){ e.preventDefault(); next(); }
+      if(e.key === 'ArrowLeft'){ e.preventDefault(); prev(); }
     });
 
-    // --- External deck loading ---
     function parseLinesToDeck(text){
       const lines = text.split(/\n+/).map(s=>s.trim()).filter(Boolean);
       const out = [];
@@ -150,20 +151,18 @@
     }
 
     async function loadRandomDeckFromUrls(){
-      if(!DECK_URLS.length) return false;
+      if(!Array.isArray(DECK_URLS) || !DECK_URLS.length) return false;
       const pick = DECK_URLS[Math.floor(Math.random()*DECK_URLS.length)];
       try{
         const res = await fetch(pick, {cache:'no-store'});
-        if(!res.ok) throw new Error(res.status+" "+res.statusText);
+        if(!res.ok) throw new Error(res.status+' '+res.statusText);
         const text = await res.text();
         const parsed = parseLinesToDeck(text);
         if(parsed.length){ deck = parsed; return true; }
-      }catch(err){ console.warn('Random deck load failed:', err); }
+      }catch(e){ console.warn('Random deck load failed:', e); }
       return false;
     }
 
-    // First render, then try to replace with a random external deck
-    rebuildOrder();
     loadRandomDeckFromUrls().then(()=>{ rebuildOrder(); });
   </script>
 </body>
