--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       border-radius: 40px;
       padding: 60px 40px 32px;
       background: rgba(0,0,0,0.8);
+       background-clip: padding-box; /* keeps black fill inside the white border */
       box-shadow: 0 0 40px rgba(255,255,255,0.08);
       text-align: center;
     }
