--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
   </style>
 </head>
 <body>
+  <a class="toplink" href="#" target="_blank" rel="noopener">Link</a>
   <main class="app" id="app">
     <div class="card">
       <div id="stage">
