--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
       opacity: 1;
       z-index: -2;
     }
+
+    .toplink{
+  position: fixed;
+  top: 12px;
+  right: 12px;
+  color: var(--fg);
+  text-decoration: none;
+  border: 2px solid var(--fg);
+  border-radius: 999px;
+  padding: 6px 12px;
+}
+.toplink:hover { background: var(--fg); color: var(--bg); }
+    
     /* Dark overlay to keep text legible */
     /* removed dark overlay to keep background fully visible */
     body {
