--- a/index.html
+++ b/index.html
@@ -5,68 +5,138 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tiny Flashcards</title>
   <style>
-    :root { --bg:#000; --fg:#fff; --muted:#9a9a9a; }
-    *{ box-sizing:border-box }
-    html,body{ height:100%; margin:0 }
-
-    /* Full, crisp background image that always fills screen */
-    body{
-      font-family:"Times New Roman", Georgia, serif;
-      color:var(--fg);
-      background: url('bg.jpg') center/cover no-repeat fixed;
-      display:block;
-      min-height:100vh;
+    :root {
+      --bg: #000;
+      --fg: #fff;
+      --muted: #888;
+      --accent: #fff;
+    }
+    * { box-sizing: border-box; }
+    html, body {
+      font-family: "Times New Roman", Georgia, serif;
+      color: var(--fg);
+      background: var(--bg);
+      display: grid;
+      place-items: center;
+      padding: 32px;
+      position: relative;
+      overflow-x: hidden;
+    }
+    /* Background image layer */
+    body::before{
+      content:"";
+      position: fixed;
+      inset: 0;
+      background: url('bg.jpg') center/cover no-repeat;
+      /* show the image clearly */
+      filter: none;
+      opacity: 1;
+      z-index: -2;
     }
 
-    .app{ width:min(860px,94%); margin:14vh auto 24vh; display:grid; gap:28px }
-
-.card{
-  border: 3px solid var(--fg);
-  border-radius: 40px;
-  /* make the actual card transparent… */
-  background: transparent;
-  /* …and draw the black panel inside with ::before */
-  position: relative;
-  padding: 64px 44px 36px;
-  text-align: center;
+    .toplink{
+  position: fixed;
+  top: 12px;
+  right: 12px;
+  color: var(--fg);
+  text-decoration: none;
+  border: 2px solid var(--fg);
+  border-radius: 999px;
+  padding: 6px 12px;
 }
-
-/* inner black panel, inset from the white border */
-.card::before{
-  content: "";
-  position: absolute;
-  inset: 2px;                        /* tweak this to change how much black you see */
-  background: rgba(0,0,0,0.8);
-  border-radius: calc(40px - 12px);   /* keep corners nicely rounded */
-  z-index: 0;
-}
-
-/* ensure your content sits above the inner panel */
-.card > * { position: relative; z-index: 1; }
-
-
-    #stage{ min-height:clamp(220px,40vh,420px); display:grid; place-items:center; gap:14px }
-
-    .prompt{ font-size:clamp(34px,3.8vw,50px); letter-spacing:.3px; margin:0 }
-    .translation{ display:block; min-height:2.6em; font-size:clamp(26px,2.9vw,38px); color:var(--muted); transition:opacity .15s ease }
-    .translation.hidden{ visibility:hidden; opacity:0 }
-    .translation.visible{ visibility:visible; opacity:.95 }
-
-    .row{ display:flex; justify-content:center; gap:18px; margin-top:28px }
-    button{ font:18px/1.2 inherit; color:var(--fg); background:transparent; border:2px solid var(--fg); border-radius:50px; padding:12px 30px; cursor:pointer; transition:all .15s ease }
-    button:hover{ background:var(--fg); color:var(--bg) }
-    button:disabled{ opacity:.35; cursor:not-allowed }
-
-
-  .footer {
-  text-align: center;
-  font-size: 14px;
-  letter-spacing: 0.6px;
-  font-weight: bold;
-  color: #39FF14;       /* neon green */
-  text-shadow: 0 0 8px #39FF14, 0 0 12px #39FF14; /* glowing neon effect */
-}
-
+.toplink:hover { background: var(--fg); color: var(--bg); }
+    
+    /* Dark overlay to keep text legible */
+    /* removed dark overlay to keep background fully visible */
+    body {
+      font-family: "Times New Roman", Georgia, serif;
+      color: var(--fg);
+      background: var(--bg);
+      display: grid;
+      place-items: center;
+      padding: 32px;
+    }
+    .app {
+      width: min(800px, 100%);
+      display: grid;
+      gap: 32px;
+    }
+    .card {
+      border: 3px solid var(--fg);
+      border-radius: 40px;
+      padding: 60px 40px 32px;
+      background: rgba(0,0,0,0.8);
+       background-clip: padding-box; /* keeps black fill inside the white border */
+      box-shadow: 0 0 40px rgba(255,255,255,0.08);
+      text-align: center;
+    }
+    .prompt {
+      font-size: clamp(28px, 3vw, 40px);
+      margin-bottom: 24px;
+      letter-spacing: 0.5px;
+    }
+    .translation {
+      opacity: 0.9;
+      font-size: clamp(22px, 2.5vw, 30px);
+      color: var(--muted);
+    }
+    .row {
+      display: flex;
+      justify-content: center;
+      gap: 16px;
+      margin-top: 24px;
+    }
+    button {
+      font-family: inherit;
+      font-size: 18px;
+      color: var(--fg);
+      background: transparent;
+      border: 2px solid var(--fg);
+      border-radius: 50px;
+      padding: 10px 28px;
+      cursor: pointer;
+      transition: all 0.15s ease-in-out;
+    }
+    button:hover {
+      background: var(--fg);
+      color: var(--bg);
+    }
+    button:disabled {
+      opacity: 0.3;
+      cursor: not-allowed;
+    }
+    .chip, label, progress, details, textarea, .import-grid { display: none !important; }
+    progress { display:none; }
+    .footer {
+      opacity: 0.5;
+      text-align: center;
+      font-size: 14px;
+      letter-spacing: 1px;
+    }
+      /* Keep the card height stable so buttons don't jump */
+    #stage{ min-height: clamp(180px, 34vh, 320px); display: grid; place-items: center; gap: 12px; }
+    .prompt{ margin-bottom: 8px; }
+    /* Reserve space for translation even when hidden */
+    .translation{ display:block; min-height: 2.2em; transition: opacity .15s ease; }
+    .translation.hidden{ visibility: hidden; opacity: 0; }
+    .translation.visible{ visibility: visible; opacity: 0.9; }
+  </style>
+</head>
+<body>
+  <a class="toplink" href="#" target="_blank" rel="noopener">Link</a>
+  <main class="app" id="app">
+    <div class="card">
+      <div id="stage">
+        <div class="prompt" id="lineText" aria-live="polite"></div>
+        <div class="translation hidden" id="lineTrans" style="margin-top:16px"></div>
+      </div>
+      <div class="row controls-bottom" id="controlsBottom">
+        <button id="prevBtn">⟵ Prev</button>
+        <button id="nextBtn">Next ⟶</button>
+      </div>
+    </div>
+    <div class="footer">Latin Flashcards · Mr. Heise</div>
+  </main>
 
   <script>
     let deck = [
@@ -74,7 +144,7 @@
       { q: "Ī ad librāriam bīrotā.", a: "Go to the bookstore by bike." },
       { q: "Dic 'sōl est.'", a: "Say 'it is the sun.'" },
       { q: "Quot gladīī sunt?", a: "How many swords are there?" },
-      { q: "Unus gladius est.", a: "There is one sword." }
+      { q: "Unus gladius est.", a: "There is one sword." },
     ];
 
     const DECK_URLS = Array.from({length: 20}, (_, i) => `decks/b${i+1}.txt`);
@@ -89,6 +159,14 @@
     let idx = 0;
     let showingA = false;
 
+    function shuffleArray(arr){
+      for(let i=arr.length-1;i>0;i--){
+        const j = Math.floor(Math.random()*(i+1));
+        [arr[i],arr[j]] = [arr[j],arr[i]];
+      }
+      return arr;
+    }
+
     function rebuildOrder(){
       order = deck.map((_, i) => i);
       idx = 0;
@@ -100,14 +178,15 @@
       const current = deck[ order[idx] ];
       if(!current){
         lineText.textContent = "(No cards)";
-        lineTrans.classList.add('hidden');
+        lineTrans.style.display = 'none';
         nextBtn.disabled = true; prevBtn.disabled = true;
         return;
       }
       nextBtn.disabled = false; prevBtn.disabled = false;
       lineText.textContent = current.q;
       lineTrans.textContent = current.a;
-      lineTrans.classList.toggle('visible', showingA);
+      lineTrans.style.display = 'block';
+      lineTrans.classList.toggle('visible', !!showingA);
       lineTrans.classList.toggle('hidden', !showingA);
     }
 
@@ -176,4 +255,3 @@
   </script>
 </body>
 </html>
-
