--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tiny Flashcards</title>
+  <title>Latin Phrases</title>
   <style>
     :root {
       --bg: #000;
@@ -150,7 +150,7 @@
         <button id="nextBtn">Next ⟶</button>
       </div>
     </div>
-    <div class="footer">Latin Flashcards · Mr. Heise</div>
+    <div class="footer">mr. heise's latin flashcards</div>
   </main>
 
   <script>
