--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
       display: grid;
       gap: 32px;
     }
-    
-.card{
+
+
+    .card{
   border: 3px solid var(--fg);
   border-radius: 40px;
   background: rgba(0,0,0,0.8);
-  background-clip: padding-box;   /* <-- this now works again */
   position: relative;
   padding: 64px 44px 36px;
   text-align: center;
+  background-clip: padding-box;
 }
-
 
 
     .prompt {
