--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <button id="nextBtn">Next ⟶</button>
       </div>
     </div>
-    <div class="footer">Latin Flashcards · Mr. Heise</div>
+    <div class="footer">mr. heise's latin flashcards</div>
   </main>
 
   <script>
