--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     html,body{ height:100%; margin:0 }
 
     /* Full, crisp background image that always fills screen */
-    body{
-      font-family:"Times New Roman", Georgia, serif;
-      color:var(--fg);
-      background: url('bg.jpg') center/cover no-repeat fixed;
-      display:block;
-      min-height:100vh;
-    }
+body{
+  font-family:"Times New Roman", Georgia, serif;
+  color:var(--fg);
+  background: url('bg.jpg') center/cover no-repeat;
+  display:block;
+  min-height:100vh;
+}
 
     .app{ width:min(860px,94%); margin:14vh auto 24vh; display:grid; gap:28px }
 
