--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
     </div>
     <div class="footer">
-      Latin Flashcards · Mr. Heise<br>
+      <span class="footer-title">Mr. Heise's Latin Flashcards</span><br>
       <span style="opacity:0.7; font-size:12px; margin-top:8px; display:inline-block;">
         Keyboard: Space or → for Next · ← for Previous
       </span>
