--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       background: var(--bg);
       display:block;
       min-height:100vh;
-cursor: url('x.png'), auto;
+cursor: url('z.png'), auto;
     }
 
     .app{ width:min(860px,94%); margin:14vh auto 24vh; display:grid; gap:28px }
